--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,35 +1,43 @@
-name: Tests
+name: Compile client
 
-on: [push, workflow_dispatch]
+on: push
 
-jobs:
-  runPush:
+jobs: 
+  heckdustry:
     runs-on: ubuntu-latest
-
-    steps:
+    steps: 
     - uses: actions/checkout@v2
-    - name: Trigger BE build
-      if: ${{ github.repository == 'Anuken/Mindustry' }}
-      run: |
-        git clone --depth=1 --branch=master https://github.com/Anuken/MindustryBuilds ../MindustryBuilds
-        cd ../MindustryBuilds
-        BNUM=$(($GITHUB_RUN_NUMBER + 20000))
-        git tag ${BNUM}
-        git config --global user.name "Github Actions"
-        git push https://Anuken:${{ secrets.API_TOKEN_GITHUB }}@github.com/Anuken/MindustryBuilds ${BNUM}
-    - name: Set up JDK 17
+    - name: Настройка JDK 17
       uses: actions/setup-java@v1
       with:
         java-version: 17
-    - name: Update bundles
-      if: ${{ github.repository == 'Anuken/Mindustry' }}
-      run: |
-        ./gradlew updateBundles
 
-        if [ -n "$(git status --porcelain)" ]; then
-          git add core/assets/bundles/*
-          git commit -m "Automatic bundle update"
-          git push
-        fi
-    - name: Run unit tests
-      run: ./gradlew clean cleanTest test --stacktrace
+    - name: Настройка ANDROID_HOME
+      run: |
+        echo "${ANDROID_HOME}/build-tools/30.0.1" >> $GITHUB_PATH
+
+    - name: Настройка разрешений
+      run: chmod +x ./gradlew
+
+    - name: Упаковка спрайтов
+      run: ./gradlew pack
+
+    - name: Компиляция версии для ПК
+      run: ./gradlew desktop:dist
+
+    - name: Компиляция версии для Android
+      run: ./gradlew android:assembleDebug  
+
+    - name: Выгрузка Desktop
+      uses: actions/upload-artifact@v2
+      with:
+        name: Desktop
+
+        path: desktop/build/libs/Mindustry.jar
+
+    - name: Выгрузка Android
+      uses: actions/upload-artifact@v2
+      with:
+        name: Android
+
+        path: android/build/outputs/apk/*
